# Termux-SSH

./: .gitignore  LICENSE  README.md  colors.py  install.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  temp.py  termux.py  user.py
.github/workflows/: pypi-publish.yml
termux_ssh/: __main__.py  install.py  termux.py
